--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   justify-content: center;
   align-items: center;
   width: 100vw;
-  background-color: #333;
+  background-color: #32233e;
 }
 
 .container {
