--- a/style.css
+++ b/style.css
@@ -21,12 +21,19 @@ body {
 .container {
   display: flex;
   align-items: center;
-  width: 800px;
+  width: 400px;
   max-width: 80%;
+  height: 100%;
   background-color: rgb(203, 149, 197);
   padding: 10px;
   border-radius: 5px;
   box-shadow: 0 0 10px 2px;
+}
+
+.text {
+  display: relative;
+  align-items: center;
+  justify-content: top;
 }
 
 .btn-grid {
