--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
 }
 
 .text {
-  position: static;
+  position: fixed;
   align-items: center;
   overflow: auto;
   width: fit-content;
@@ -97,13 +97,13 @@ a {
 }
 
 .popout-menu.left {
-  position: absolute;
+  position: relative;
   margin-left: -115px;
   z-index: 2;
 }
 
 .popout-menu.right {
-  position: absolute;
+  position: relative;
   margin-right: -115px;
   z-index: 2;
 }
