--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body {
 .text {
   position: fixed;
   align-items: center;
+  justify-content: center;
   overflow: auto;
   padding: 1%;
   width: 40%;
