--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   padding: 0;
   margin: 1vh 0;
   display: flex;
-  flex-flow: column nowrap;
+  /* flex-flow: column nowrap; */
   justify-content: center;
   align-items: center;
   width: 100vw;
